[package]
name = "mono-rust"
version = "0.1.0"
authors = ["Josh <jmillikan12345@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"

[build-dependencies]
bindgen = "0.56.0"
cc = {version = "1.0.66", features = ["parallel"]}
pkg-config = "0.3.19"