[package]
name = "mono-rust"
version = "0.1.0"
authors = ["Josh <jmillikan12345@gmail.com>"]
edition = "2018"

license = "MIT"
repository = "https://github.com/JoshBmillikan/mono-rust.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


